--- a/action.yaml
+++ b/action.yaml
@@ -14,4 +14,4 @@ inputs:
   name:
     description: "The commiters name"
     required: true
-    default: {{ github.actor}}
+    default: ${{ github.actor}}
